Implementação de menu e rodapé

--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -26,3 +26,9 @@ padding: 10px;
 .fa-linkedin-square:hover{
     color: rgb(41, 131, 233);
 }
+.verde{
+    background-color:  #579d18;
+   }
+.verdeescuro{
+    background-color:  #35650b;
+   }
