--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small bg-secondary pt-4"> 
+<footer class="page-footer font-small verde pt-4"> 
     <div class="container">
 
         <div class="row">
@@ -29,7 +29,7 @@
     </div>
     </div>
 
-    <div class="footer-copyright bg-dark text-center py-3">
+    <div class="footer-copyright verdeescuro text-center py-3">
         <span class="text-light">Todos os direitos reservados:  </span>
         <a class="text-light" target="_blank" href="https://brasil.generation.org">Generation Brasil</a>
     </div>
