--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-light verde">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,11 +11,8 @@
         <li class="nav-item pl-3">
           <p class="m-0 font-weight-bold text-white fs-16">Veggieats</p>
         </li>
-        <li class="nav-item pl-3">
-            <a href=""><p class="text-white fs-16 m-0"> <i class="fa fa-pencil-square-o " aria-hidden="true"></i></p></a> 
-            
-        </li>
       </ul>
+      
       <ul class="navbar-nav ml-auto d-flex align-items-center">
         <li class="nav-item pl-3">
             <a class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
