--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-menu></app-menu>
-<app-rodape></app-rodape>
+<!-- <app-menu></app-menu> -->
+<!-- <app-rodape></app-rodape> -->
+<app-entrar-cadastro></app-entrar-cadastro>
