criação da pagina sobre nós

--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,1 +1,84 @@
-<p>sobre works!</p>
+<div class="container">
+
+  <div class="row mt-5">
+    <div class="col-md-12">
+      <h1>SOBRE NÓS</h1>
+    </div>
+    </div>
+
+    <div class="row d-flex justify-content-center align-items-center">
+      <div class="col-md-6">
+        <p class="text-justify">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores commodi fugit ipsam obcaecati nesciunt iste, saepe et perferendis nisi deserunt facilis voluptas reprehenderit. Iusto et officia inventore minus, libero porro ducimus dolore ipsa eos minima, mollitia voluptates eligendi. Magnam, molestiae illum animi accusamus, veniam minima iure nam omnis, ipsum quaerat modi velit sit dolores pariatur ut odit odio harum repellendus nihil deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa minus quasi molestias quae, cupiditate corporis id soluta, voluptatem voluptatibus facilis eveniet at ut delectus consequuntur harum neque quos optio error dicta veritatis! Magnam voluptas voluptatibus eligendi molestias repellendus! Accusamus magnam tempora perspiciatis sint, quos ab, fugiat vel aliquid temporibus, aspernatur ipsam voluptatum nostrum asperiores dolorum!
+        </p>
+      </div>
+      <div class="col-md-6">
+        <img  src="../../assets/img/veggieats7.jpg" class="img-fluid" alt="logo">
+      </div>
+    </div>
+
+    <div class="row mt-3">
+      <div class="col d-flex justify-content-center">
+        <h1>EQUIPE</h1>
+      </div>
+    </div>
+    <div class="card-deck m-3">
+      <div class="card bg">
+        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+        <div class="card-body text-center">
+          <h5 class="card-title">GEORDAN</h5>
+          <a href="https://github.com/GeordanFS" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/in/geordanfagundes/" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        </div>
+      </div>
+
+      <div class="card bg">
+        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+        <div class="card-body text-center">
+          <h5 class="card-title">JENNY GRITTI</h5>
+          <a href="https://github.com/jennygritti" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/in/jenny-gritti/" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        </div>
+      </div>
+
+      <div class="card bg">
+        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+        <div class="card-body text-center">
+          <h5 class="card-title">KARINE</h5>
+          <a href="https://github.com/karinecordeiro" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/in/karinecordeiro" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        </div>
+      </div>
+  </div>
+
+  <div class="card-deck m-3">
+    <div class="card bg">
+      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+      <div class="card-body text-center">
+        <h5 class="card-title">PAULO HENRIQUE</h5>
+        <a href="https://github.com/PHChil" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/paulo-henrique-chil-132566197/" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+      </div>
+    </div>
+
+    <div class="card bg">
+      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+      <div class="card-body text-center">
+        <h5 class="card-title">PEDRO HENRIQUE</h5>
+        <a href="https://github.com/PedroHenriquedp" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/pedro-henrique-dp" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+      </div>
+    </div>
+
+    <div class="card bg">
+      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+      <div class="card-body text-center">
+        <h5 class="card-title">RAPHAELA</h5>
+        <a href="https://github.com/rphaela" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/raphaela-oliveira" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+      </div>
+    </div>
+</div>
+
+<hr>
+
