Cabeçalho e rodapé e algumas rotas

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,18 +4,56 @@
     </button>
   
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-      <ul class="navbar-nav mr-auto d-flex align-items-center">
+        
+      <ul class="navbar-nav d-flex align-items-center justify-content-center">
         <li class="nav-item active">
-          <img src="../../assets/img/veggieats7.jpg" alt="imagem do usuario" width="50px" height="50px" class="img-fluid rounded-circle">
-        </li>
-        <li class="nav-item pl-3">
-          <p class="m-0 font-weight-bold text-white fs-16">Veggieats</p>
-        </li>
+            <img src="../../assets/img/veggieats7.png" alt="imagem do usuario" width="100px" height="100px" class="img-fluid rounded-circle">
+          </li>
+          <li class="nav-item ">
+            <p style="font-size: 18pt;" class="m-0  text-white fredoka ">veggieats</p>
+          </li>
+
+          
+            
+            
+          
+
+         
+
+        
       </ul>
-      
-      <ul class="navbar-nav ml-auto d-flex align-items-center">
-        <li class="nav-item pl-3">
-            <a class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+      <ul class="navbar-nav d-flex align-items-center ml-auto">
+        
+        <li class="nav-item active p-1 montserrat ">
+            <a class="nav-link  text-light" href="#">Início <span class="sr-only">(página atual)</span></a>
+          </li>
+          <li class="nav-item p-1 montserrat">
+            <a class="nav-link  text-light" href="#">Restaurantes</a>
+          </li>
+          <li class="nav-item p-1 montserrat">
+            <a class="nav-link  text-light" href="#">Sobre nós</a>
+          </li>
+          <li class="nav-item p-1 montserrat">
+            <a class="nav-link  text-light" href="#">Contato</a>
+          </li>
+          <li class="nav-item dropdown">
+          
+    </ul>
+
+      <ul class="navbar-nav d-flex ml-auto align-items-center">
+        
+          <li class="nav-item dropdown montserrat">
+            <a class="nav-link dropdown-toggle font-weight-bold text-light fs-16" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle" aria-hidden="true"></i>
+              Conta
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Login</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Cadastre-se</a>
+            </div>
+          </li>
+          <li class="nav-item pl-3">
+            <a class="m-0 font-weight-bold text-white fs-16"> <i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i></a>
           </li>
       </ul>
     </div>
