--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -2,7 +2,7 @@
     <div class="container">
 
         <div class="row">
-        <div class="col-md-12 d-flex justify-content-center">
+        <div class="col-md-12 d-flex justify-content-center  montserrat">
             <h4 class="text-white">Siga-nos nas redes sociais</h4>
         </div>
         </div>
@@ -29,9 +29,10 @@
     </div>
     </div>
 
-    <div class="footer-copyright verdeescuro text-center py-3">
+    <div class="footer-copyright verdeescuro text-center py-3  montserrat">
         <span class="text-light">Todos os direitos reservados:  </span>
         <a class="text-light" target="_blank" href="https://brasil.generation.org">Generation Brasil</a>
     </div>
 
 </footer>
+
