--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+.montserrat{
+    font-family: 'Montserrat', sans-serif;
+}
+.fredoka{
+    font-family: 'Fredoka One', cursive;}
