--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,1 +1,72 @@
-<p>contato works!</p>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>Document</title>
+</head>
+<body>
+
+</body>
+</html>
+
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="contato.html">
+      <img src="../../assets/img/veggieats7.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      Veggieats
+    </a>
+  </div>
+</nav>
+
+    <h1 class="center">Entre em contato</h1>
+
+    <div class="container mb-50">
+
+        <div>
+            <h2>Mande uma mensagem</h2>
+            <form>
+              <div class="row">
+                <div class="col-sm-6">
+                    <label for="Nome" class="form-label">Nome</label>
+                    <input type="txt" class="form-control" id="nome" placeholder="Ex: João">
+                </div>
+                <div class="col-sm-6">
+                    <label for="Sobrenome" class="form-label">Sobrenome</label>
+                    <input type="txt" class="form-control" id="sobrenome" placeholder="Augusto">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <label for="Email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                </div>
+                <div class="col-sm-6">
+                    <label for="Assunto" class="form-label">Assunto</label>
+                    <input type="txt" class="form-control" id="assunto" placeholder="">
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <label for="Dig_mesage" class="form-label">Digite sua mensagem aqui...</label>
+                <textarea class="form-control" id="Dig_mesage" rows="3"></textarea>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+
+                </div>
+                <div class="col-sm-4">
+                    <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
+                </div>
+            </div>
+                </form>
+        </div>
+
+        <div>
+            <div class="ml-50">
+
+                <p></p>
+                <p></p>
+
