--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,84 @@
-<p>inicio works!</p>
+<div class="container">
+  <div class="col-md-12 main-content">
+
+    <!-- CARROSEL -->
+
+    <div id="carouselExampleIndicators" class="carousel slide card-carrosel" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="../../assets/img/cafeDaManha.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../assets/img/cafeDaManha.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../assets/img/cafeDaManha.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    </div>
+
+        <!-- PRODUTOS -->
+
+        <div class="row">
+          <div class="col-md-12 mt-5">
+            <h1 class="text-center text-success">Café da manhã</h1>
+            <p class="text-center">Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto</p>
+          </div>
+        </div>
+        <div class="row mb-3 md-3 d-flex justify-content-center align-items-center">
+  <div class="col-md-3 px-2">
+    <div class="card" >
+      <img class="card-img-top" src="../../assets/img/cafeDaManha.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Maçã</h5>
+        <p class="card-text">ALGUMA COISA</p>
+        <button>Adicionar ao carrinho</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3 px-2">
+    <div class="card">
+      <img class="card-img-top" src="../../assets/img/cafeDaManha.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Maçã</h5>
+        <p class="card-text">ALGUMA COISA</p>
+        <button>Adicionar ao carrinho</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3 px-2">
+    <div class="card" >
+      <img class="card-img-top" src="../../assets/img/cafeDaManha.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Maçã</h5>
+        <p class="card-text">ALGUMA COISA</p>
+        <button>Adicionar ao carrinho</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3 px-2">
+    <div class="card" >
+      <img class="card-img-top" src="../../assets/img/cafeDaManha.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Maçã</h5>
+        <p class="card-text">ALGUMA COISA</p>
+        <button>Adicionar ao carrinho</button>
+      </div>
+    </div>
+  </div>
+</div>
+  </div>
