--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -1,1 +1,119 @@
-<p>restaurantes works!</p>
+
+<div class="container-fluid">
+
+  <div class="container-fluid d-flex align-items-center justify-content-center mt-5">
+      <div class="row d-flex align-items-center">
+        <div class="row">
+        <div class="col-md-12 main-content">
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Procure por um item ou restaurante!" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+        </form>
+      </div>
+    </div>
+  </div> </div>
+
+
+  <div class="d-flex justify-content-center mt-3">
+    <ul class="list-group align-items-center">
+      <li class="list-group-item">Pra Retirar</li>
+      <li class="list-group-item">Entrega Grátis</li>
+      <li class="list-group-item">Por Avaliação</li>
+      </ul>
+  </div>
+
+
+  <div class="container-fluid d-flex align-items-center justify-content-center">
+    <div class="container py-5">
+      <div class="row d-flex align-items-center">
+        <div class="col-md-12 main-content">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://static-images.ifood.com.br/image/upload/t_high,q_100/webapp/landing/landing-banner-3.png" class="d-block" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://static-images.ifood.com.br/image/upload/t_high,q_100/webapp/landing/landing-banner-1.png" class="d-block" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://static-images.ifood.com.br/image/upload/t_high,q_100/webapp/landing/landing-banner-2.png" class="d-block" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    
+
+    <div class= "container-fluid d-flex align-items-center justify-content-center">
+
+    <div class="card mr-3" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+
+    <div class="card mr-3" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+
+  </div>
+
+  <div class= "container-fluid d-flex align-items-center justify-content-center mt-5">
+
+    <div class="card mr-3" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+
+    <div class="card mr-3" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+
+  </div>
+
+  <br>
+  <br>
+  <br>
+
+</div>
+
+
