--- a/src/app/entrar-cadastro/entrar-cadastro.component.html
+++ b/src/app/entrar-cadastro/entrar-cadastro.component.html
@@ -14,16 +14,16 @@
 
           <div class="form-group">
             <label for="usuario">Usuario</label>
-            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
+            <input [(ngModel)]="usuarioLogin.usuario" class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
           </div>
 
           <div class="form-group">
             <label for="senha">Senha</label>
-            <input class="form-control" type="pass" name="senha" id="senha" placeholder="Sua senha">
+            <input [(ngModel)]="usuarioLogin.senha" class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
           </div>
 
           <div class="d-flex justify-content-center mt-5 mb-5">
-            <button type="submit" class="btn btn-success">Entrar</button>
+            <button type="submit" class="btn btn-success" (click)="entrar()">Entrar</button>
           </div>
 
         </div>
@@ -46,33 +46,37 @@
 
           <div class="form-group">
             <label for="nome">Nome</label>
-            <input class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
+            <input [(ngModel)]="usuario.nome" class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
           </div>
 
           <div class="form-group">
             <label for="usuario">Usuario</label>
-            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
+            <input [(ngModel)]="usuario.usuario" class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
           </div>
 
           <div class="form-group">
             <label for="foto">Link</label>
-            <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
+            <input [(ngModel)]="usuario.foto" class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
+          </div>
+          <div class="form-group">
+            <label for="cpf">cpf</label>
+            <input [(ngModel)]="usuario.cpf" class="form-control" type="text" name="cpf" id="cpf" placeholder="seu cpf">
           </div>
 
           <div class="form-group">
             <label for="senha">Senha</label>
-            <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
+            <input (input)="confirmSenha($event)" class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
           </div>
 
           <div class="form-group">
             <label for="confirmSenha">Confirmar Senha</label>
-            <input class="form-control" type="password" name="confirmSenha" id="confirmSenha"
+            <input [(ngModel)]="usuario.senha" class="form-control" type="password" name="confirmSenha" id="confirmSenha"
               placeholder="Confirme sua senha">
           </div>
 
           <div class="form-group">
             <label for="tipo">Tipo de usuario</label>
-            <select class="form-control" name="tipo" id="tipo">
+            <select [(ngModel)]="usuario.tipoUsuario" (change)="tipoUser($event)" class="form-control" name="tipo" id="tipo">
               <option>Selecione um tipo de usuário</option>
               <option value="vendedor">Vendedor(a)</option>
               <option value="comprador">Comprador(a)</option>
@@ -81,7 +85,7 @@
 
           <div class="d-flex justify-content-center mt-5 mb-5">
             <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
-            <button type="submit" class="btn btn-success">Cadastrar</button>
+            <button type="submit" class="btn btn-success" (click)="cadastrar()">Cadastrar</button>
           </div>
 
         </div>
