--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+
+<app-entrar-cadastro></app-entrar-cadastro>
+
+<!-- <app-sobre></app-sobre> -->
