--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container fredoka">
 
   <div class="row mt-5">
     <div class="col-md-12">
-      <h1>SOBRE NÓS</h1>
+      <h1>Sobre nós</h1>
     </div>
     </div>
 
@@ -13,72 +13,80 @@
         </p>
       </div>
       <div class="col-md-6">
-        <img  src="../../assets/img/veggieats7.jpg" class="img-fluid" alt="logo">
+        <img  src="../../assets/img/veggieats7.png" class="img-fluid" alt="logo">
       </div>
     </div>
 
-    <div class="row mt-3">
+    <div class="row mt-4">
       <div class="col d-flex justify-content-center">
         <h1>EQUIPE</h1>
       </div>
     </div>
-    <div class="card-deck m-3">
+    <div class="card-deck mt-3">
       <div class="card bg">
-        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
         <div class="card-body text-center">
           <h5 class="card-title">GEORDAN</h5>
-          <a href="https://github.com/GeordanFS" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
-          <a href="https://www.linkedin.com/in/geordanfagundes/" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+          <div>
+          </div>
+          <div>
+            <button class="g mr-3"><a href="https://github.com/GeordanFS"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+            <button class="l"><a href="https://www.linkedin.com/in/geordanfagundes/"  target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></button>
+          </div>
         </div>
       </div>
 
       <div class="card bg">
-        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
         <div class="card-body text-center">
           <h5 class="card-title">JENNY GRITTI</h5>
-          <a href="https://github.com/jennygritti" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
-          <a href="https://www.linkedin.com/in/jenny-gritti/" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+          <button class="g mr-3"><a href="https://github.com/jennygritti"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+          <button class="l"><a href="https://www.linkedin.com/in/jenny-gritti/"  target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></button>
+
         </div>
       </div>
 
       <div class="card bg">
-        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
         <div class="card-body text-center">
           <h5 class="card-title">KARINE</h5>
-          <a href="https://github.com/karinecordeiro" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
-          <a href="https://www.linkedin.com/in/karinecordeiro" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+          <button class="g mr-3"><a href="https://github.com/karinecordeiro"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+          <button class="l"><a href="https://www.linkedin.com/in/karinecordeiro"  target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></button>
         </div>
       </div>
   </div>
 
-  <div class="card-deck m-3">
+  <div class="card-deck mt-4">
     <div class="card bg">
-      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
       <div class="card-body text-center">
         <h5 class="card-title">PAULO HENRIQUE</h5>
-        <a href="https://github.com/PHChil" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
-        <a href="https://www.linkedin.com/in/paulo-henrique-chil-132566197/" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        <button class="g mr-3"><a href="https://github.com/PHChil"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+        <button class="l"><a href="https://www.linkedin.com/in/paulo-henrique-chil-132566197/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></button>
       </div>
     </div>
 
     <div class="card bg">
-      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
       <div class="card-body text-center">
         <h5 class="card-title">PEDRO HENRIQUE</h5>
-        <a href="https://github.com/PedroHenriquedp" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
-        <a href="https://www.linkedin.com/in/pedro-henrique-dp" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        <button class="g mr-3"><a href="https://github.com/PedroHenriquedp" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+        <button class="l"><a href="https://www.linkedin.com/in/pedro-henrique-dp" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></button>
+
       </div>
     </div>
 
     <div class="card bg">
-      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.jpg" alt="Imagem de capa do card">
+      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
       <div class="card-body text-center">
         <h5 class="card-title">RAPHAELA</h5>
-        <a href="https://github.com/rphaela" class="card-link" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
-        <a href="https://www.linkedin.com/in/raphaela-oliveira" class="card-link" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        <button class="g mr-3"><a href="https://github.com/rphaela" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+        <button class="l"><a href="https://www.linkedin.com/in/raphaela-oliveira"  target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></button>
+
       </div>
     </div>
 </div>
 
 <hr>
+
 
