--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
   --marromPadrao: #6f6047;
   --roxoPadrao: #8b2fc5;
   --laranjaPadrao: #dc9b1e;
+  --verdeClaro: #d9f7cd;
+  --laranjaClaro: #f1deba;
+  --marromClaro: #b49155;
+  --roxoClaro: #b684da;
 }
 .montserrat{
     font-family: 'Montserrat', sans-serif;
