--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,59 +1,44 @@
-<nav class="navbar navbar-expand-lg navbar-light verde">
+<nav class="navbar navbar-expand-lg navbar-light bg">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-        
+
       <ul class="navbar-nav d-flex align-items-center justify-content-center">
         <li class="nav-item active">
-            <img src="../../assets/img/veggieats7.png" alt="imagem do usuario" width="100px" height="100px" class="img-fluid rounded-circle">
+            <img src="../../assets/img/logoVeggi.png" alt="imagem do usuario" width="250px" height="66">
           </li>
-          <li class="nav-item ">
-            <p style="font-size: 18pt;" class="m-0  text-white fredoka ">veggieats</p>
-          </li>
-
-          
-            
-            
-          
-
-         
-
-        
       </ul>
       <ul class="navbar-nav d-flex align-items-center ml-auto">
-        
-        <li class="nav-item active p-1 montserrat ">
-            <a class="nav-link  text-light" href="#">Início <span class="sr-only">(página atual)</span></a>
+        <li class="nav-item active p-1 fredoka">
+            <a class="nav-verde" href="#">INÍCIO <span class="sr-only">(página atual)</span></a>
           </li>
-          <li class="nav-item p-1 montserrat">
-            <a class="nav-link  text-light" href="#">Restaurantes</a>
+          <li class="nav-item p-1 fredoka">
+            <a class="nav-verde" href="#">RESTAURANTES</a>
           </li>
-          <li class="nav-item p-1 montserrat">
-            <a class="nav-link  text-light" href="#">Sobre nós</a>
+          <li class="nav-item p-1 fredoka">
+            <a class="nav-verde" href="#">SOBRE NÓS</a>
           </li>
-          <li class="nav-item p-1 montserrat">
-            <a class="nav-link  text-light" href="#">Contato</a>
+          <li class="nav-item p-1 fredoka">
+            <a class="nav-verde" href="#">CONTATO</a>
           </li>
           <li class="nav-item dropdown">
-          
+
     </ul>
 
       <ul class="navbar-nav d-flex ml-auto align-items-center">
-        
-          <li class="nav-item dropdown montserrat">
-            <a class="nav-link dropdown-toggle font-weight-bold text-light fs-16" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle" aria-hidden="true"></i>
-              Conta
-            </a>
+
+          <li class="nav-item dropdown fredoka">
+            <a class="nav-conta dropdown-toggle fs-16" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle" aria-hidden="true"></i> ACESSO</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Login</a>
+              <a class="dropdown-item" href="#">LOGIN</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Cadastre-se</a>
+              <a class="dropdown-item" href="#">CADASTRO</a>
             </div>
           </li>
           <li class="nav-item pl-3">
-            <a class="m-0 font-weight-bold text-white fs-16"> <i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i></a>
+            <a class="m-0 font-weight-bold fs-16 aumentar"> <i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i></a>
           </li>
       </ul>
     </div>
