--- a/src/app/sobre/sobre.component.css
+++ b/src/app/sobre/sobre.component.css
@@ -1,20 +1,56 @@
-a{
-  font-size: 2rem;
-  color:var(--verdePadrao);
-}
-a:hover{
-  color: var(--laranjaPadrao);
-}
-
 p, h1{
   color:var(--verdePadrao)
 }
-h5{
-  color:var(--marromPadrao);
+.card {
+  color: var(--laranjaPadrao);
+  border:solid 3px;
+  border-color: var(--laranjaClaro);
+  border-radius: 0.50rem;
+  transition: 0.7s ease;
 }
-.bg{
- background-color: rgb(237, 229, 240)
+.card:hover {
+  color: var(--marromPadrao);
+  border-color: var(--marromClaro);
+  transform: translate3d(0, -10px, 0);
 }
-.bg:hover{
-  background-color: rgb(211, 240, 211)
+button:hover{
+  font-size: 1.65rem;
+  transform: translate3d(0, 3px, 0);
+}
+a{
+  color: white;
+}
+/* From uiverse.io by @alexroumi */
+button{
+  padding: 0.50rem 1rem;
+  border: unset;
+  border-radius: 2em;
+  color: #212121;
+  z-index: 1;
+  background: var(--roxoClaro);
+  position: relative;
+  font-size: 1.5rem;
+  transition: all 250ms;
+  overflow: hidden;
+}
+
+button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 30em;
+  background-color: var(--verdePadrao);
+  z-index: -1;
+  transition: all 250ms
+}
+
+button:hover {
+  color: #e8e8e8;
+}
+
+button:hover::before {
+  width: 100%;
 }
