--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<!-- <router-outlet></router-outlet> -->
-
-<app-entrar-cadastro></app-entrar-cadastro>
-
-<!-- <app-sobre></app-sobre> -->
+<router-outlet></router-outlet>
