--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -31,57 +31,68 @@
       </a>
     </div>
     </div>
-
+        <div class="col-md-12 justify-content-center text-center d-flex my-5">
+              <a href="" class="mx-5">Vender</a>
+              <a href="" class="mx-5">Cliente</a>
+              <a href="" class="mx-5">Entregador</a>
+            </div>
         <!-- PRODUTOS -->
+        <!-- jumbotron-->
+<div class="jumbotron jumbotron-fluid text-center verde text-white">
+  <div class="container">
+    <h1 class="display-4">Apoie o Veggieats</h1>
+    <p class="lead">Clique abaixo para entrar em contato e fazer parte do projeto.</p>
+  </div>
+
+  
+
+  <div class="row justify-content-center"><div class="col-md-6">
+    <button class="btn btn-light mr-2" data-toggle="modal" data-target="#apoiemodal">CLIQUE AQUI</button>
+      
+  </div></div>
+</div>
+<!-- jumbotron fim-->
+
+  
+
 
         <div class="row">
-          <div class="col-md-12 mt-5">
-            <h1 class="text-center text-success">Café da manhã</h1>
-            <p class="text-center">Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto</p>
+          <div class="col-md-12 mt-5 justify-content-center text-center">
+            <h1 class="text-center text-success">Categorias</h1>
+            <a routerLink="/categoria" class="text-center justify-content-center">+ Adicionar Categoria</a>
+            <p class="text-center">Aqui estão nossas categorias, selecione uma e vá conhecer nossos restaurantes!</p>
           </div>
         </div>
         <div class="row mb-3 md-3 d-flex justify-content-center align-items-center">
   <div class="col-md-3 px-2">
-    <div class="card" >
-      <img class="card-img-top" src="../../assets/img/cafeDaManha.jpg" alt="Card image cap">
+    <div class="card " *ngFor="let item of listaCategorias" >
+      <img class="card-img-top" src={{item.foto}} alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Maçã</h5>
-        <p class="card-text">ALGUMA COISA</p>
+        <h5 class="card-title">{{item.nome}}</h5>
+        <p class="card-text">{{item.descricao}}</p>
         <button>Adicionar ao carrinho</button>
       </div>
     </div>
   </div>
-  <div class="col-md-3 px-2">
-    <div class="card">
-      <img class="card-img-top" src="../../assets/img/cafeDaManha.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Maçã</h5>
-        <p class="card-text">ALGUMA COISA</p>
-        <button>Adicionar ao carrinho</button>
       </div>
     </div>
-  </div>
-  <div class="col-md-3 px-2">
-    <div class="card" >
-      <img class="card-img-top" src="../../assets/img/cafeDaManha.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Maçã</h5>
-        <p class="card-text">ALGUMA COISA</p>
-        <button>Adicionar ao carrinho</button>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-3 px-2">
-    <div class="card" >
-      <img class="card-img-top" src="../../assets/img/cafeDaManha.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Maçã</h5>
-        <p class="card-text">ALGUMA COISA</p>
-        <button>Adicionar ao carrinho</button>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
+  
 
 
+<!-- Modal -->
+<div class="modal fade" id="apoiemodal" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content text-center ">
+        <div class="modal-header text-center ">
+          <h5 class="modal-title text-center " id="TituloModalCentralizado">APOIE</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body text-center justify-content-center">
+          <h3>Apoie o projeto e ajude o planeta! Nos envie um email para:</h3>
+          <h2>veggieatsprojeto@gmail.com</h2>
+          <h3>Estamos te aguardando 😄</h3>
+        </div>
+      </div>
+    </div>
