--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,38 +1,97 @@
-<footer class="page-footer font-small verde pt-4"> 
-    <div class="container">
+<!-- Footer -->
+<footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-facebook-f"></i
+        ></a>
+  
+        <!-- Twitter -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-twitter"></i
+        ></a>
+  
+        <!-- Google -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-google"></i
+        ></a>
+  
+        <!-- Instagram -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-instagram"></i
+        ></a>
+  
+        <!-- Linkedin -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+  
+        <!-- Github -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-github"></i
+        ></a>
+      </section>
+      <!-- Section: Social media -->
+  
+      <!-- Section: Form -->
+      <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Cadastre-se para receber nossas ofertas!</strong>
+              </p>
+            </div>
+            <!--Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-md-5 col-12">
+              <!-- Email input -->
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="form5Example21" class="form-control" />
+                <label class="form-label" for="form5Example21">Email address</label>
+              </div>
+            </div>
+            <!--Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-auto">
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-outline-light mb-4">
+                Cadastre-se
+              </button>
+            </div>
+            <!--Grid column-->
+          </div>
+          <!--Grid row-->
+        </form>
+      </section>
+      <!-- Section: Form -->
+  
+      <!-- Section: Text -->
+      <section class="mb-4">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
+          repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
+          eum harum corrupti dicta, aliquam sequi voluptate quas.
+        </p>
+      </section>
+      <!-- Section: Text -->
+  
 
-        <div class="row">
-        <div class="col-md-12 d-flex justify-content-center  montserrat">
-            <h4 class="text-white">Siga-nos nas redes sociais</h4>
-        </div>
-        </div>
-
-      <div class="row">
-        <div class="col-md-12 d-flex justify-content-center">
-        <ul class="social-network">
-            <li>
-            <a href="https://www.facebook.com/" target="_blank" class="iconFacebook">
-            <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-            </li>
-
-            <li>
-            <a href="https://www.instagram.com/" target="_blank" class="iconInsta">
-            <i class="fa fa-instagram" aria-hidden="true"></i></a>
-            </li>
-
-            <li>
-            <a href="https://www.linkedin.com/" target="_blank" class="iconLinkedin">
-            <i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-            </li>
-        </ul>
-        </div>
     </div>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2020 Copyright:
+      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
-
-    <div class="footer-copyright verdeescuro text-center py-3  montserrat">
-        <span class="text-light">Todos os direitos reservados:  </span>
-        <a class="text-light" target="_blank" href="https://brasil.generation.org">Generation Brasil</a>
-    </div>
-
-</footer>
-
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
