--- a/src/app/restaurantes/restaurantes.component.css
+++ b/src/app/restaurantes/restaurantes.component.css
@@ -1,10 +1,15 @@
-*{
-  margin: 0%;
-  padding: 0%;
+.size{
+  font-size: 22px;
+}
+.jumbotron{
+  padding: 0px;
+  background-color: var(--verdeClaro);
+}
+input{
+  border-radius: 1rem;
 }
 
-
-.main-content {
-  display: flex;
-  justify-content: center;
+p {
+  padding: 0;
+  margin: 0;
 }
