--- a/src/app/delete/categoria-delete/categoria-delete.component.html
+++ b/src/app/delete/categoria-delete/categoria-delete.component.html
@@ -1,1 +1,26 @@
-<p>categoria-delete works!</p>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center text-secondary">Apagar Categoria</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h4 class="text-center text-secondary">Você tem certeza? Todas as produtos dessa categoria serão apagados</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h5 class="text-center text-info">Categoria: {{categoria.nome}}</h5>
+        </div>
+    </div>
+
+    <div class="row">
+    <div class="col-md-12 d-flex justify-content-center">
+        <button class="btn btn-danger mr-4" routerLink="/inicio">Não</button>
+        <button class="btn btn-success" (click)="apagar()">Apagar</button>
+    </div></div>
+    
+</div>
