--- a/src/app/edit/categoria-edit/categoria-edit.component.html
+++ b/src/app/edit/categoria-edit/categoria-edit.component.html
@@ -1,1 +1,21 @@
-<p>categoria-edit works!</p>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-md-12">
+                <h1 class="text-center text-secondary">Atualizar Categoria</h1>
+        </div>
+    </div>
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="descricao">Descrição</label>
+                <input type="text" class="form-control" id="descricao" [(ngModel)]="categoria.nome">
+                <input type="text" class="form-control" id="descricao" [(ngModel)]="categoria.descricao">
+                <input type="text" class="form-control" id="descricao" [(ngModel)]="categoria.foto">
+            </div>
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-danger mr-4" routerLink="/inicio">Cancelar</button>
+                <button class="btn btn-success" (click)="atualizar()">Atualizar</button>
+            </div>
+        </div>
+    </div>
+</div>
