--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -47,3 +47,8 @@ a{
   color: var(--roxoPadrao);
   background-color: transparent;
 }
+.logoVeg{
+  background-size: cover;
+  height: 80px;
+  width: 80px;
+}
