--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,9 +7,15 @@
 
       <ul class="navbar-nav d-flex align-items-center justify-content-center">
         <li class="nav-item active">
-            <img [src]="foto" alt="imagem do usuario" width="250px" height="66">
-            <p class="nav-verde" href="#">Bem vinde, <span class="texto">{{nome}}</span></p>
-            </li>
+    <div *ngIf="login">
+          <img src="../assets/img/logoVeg.png" class="logoVeg" alt="imagem do usuario">
+            <p class="nav-verde" href="#">Bem-vind@, <span class="texto">{{nome}}</span></p>
+            </div>
+    <div *ngIf="idUser">
+      <img src="../assets/img/logoVeg.png" class="logoVeg" alt="imagem do usuario">
+      <p class="nav-verde" href="#">Bem-vind@, <span class="texto">{{nome}}</span></p>
+    </div>
+          </li>
       </ul>
       <ul class="navbar-nav d-flex align-items-center ml-auto">
         <li class="nav-item active p-1 fredoka">
