Crud completo de produto

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -32,7 +32,7 @@
     </div>
     </div>
         <div class="col-md-12 justify-content-center text-center d-flex my-5">
-              <a href="" class="mx-5">Vender</a>
+              <a href="" routerLink="/produto" class="mx-5">Vender</a>
               <a href="" class="mx-5">Cliente</a>
               <a href="" class="mx-5">Entregador</a>
             </div>
