--- a/src/app/delete/produto-delete/produto-delete.component.html
+++ b/src/app/delete/produto-delete/produto-delete.component.html
@@ -1,1 +1,33 @@
-<p>produto-delete works!</p>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center text-secondary">Apagar produto</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h4 class="text-center text-secondary">Você tem certeza? O produto será apagado para sempre</h4>
+        </div>
+    </div>
+
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-4">
+                <div class="card text-center" >
+                <div class="card-body">
+                  <h5 class="card-title">{{produto.nome}}</h5>
+                  <small class="text-muted">Descrição {{produto.descricao}} </small>
+                  <p class="card-text">{{produto.preco}} reais</p>
+                  <p class="card-text"></p>
+                </div>
+        </div>
+    </div>
+
+    
+    
+</div>
+<div class="row mt-5">
+    <div class="col-md-12 d-flex justify-content-center">
+        <button class="btn btn-danger mr-4" routerLink="/inicio">Não</button>
+        <button class="btn btn-success" (click)="apagar()">Sim</button>
+    </div></div>
