--- a/src/app/edit/produto-edit/produto-edit.component.html
+++ b/src/app/edit/produto-edit/produto-edit.component.html
@@ -1,1 +1,47 @@
-<p>produto-edit works!</p>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center text-secondary">Atualizar Produto</h1>
+        </div>
+    </div>
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="titulo">nome</label>
+                <input [(ngModel)]="produto.nome" type="text" class="form-control" id="titulo"
+                    placeholder="nome do produto">
+            </div>
+            <div class="form-group">
+                <label for="texto">Descrição</label>
+                <textarea [(ngModel)]="produto.descricao" name="texto" class="form-control" id="texto"
+                    rows="3"></textarea>
+            </div>
+            <div class="form-group">
+                <input [(ngModel)]="produto.preco" type="text" class="form-control" id="titulo" placeholder="preco">
+            </div>
+            <div class="form-group">
+
+                <input [(ngModel)]="produto.tipoProduto" type="text" class="form-control" id="titulo"
+                    placeholder="tipo">
+            </div>
+            <div class="form-group">
+                <label for="titulo">nome</label>
+                <input [(ngModel)]="produto.estoque" type="text" class="form-control" id="titulo" placeholder="estoque">
+            </div>
+            <div class="form-group">
+                <label for="titulo">nome</label>
+                <input [(ngModel)]="produto.foto" type="text" class="form-control" id="titulo" placeholder="estoque">
+            </div>
+            <div class="form-group">
+                <select class="form-control" name="tema" id="tema" [(ngModel)]="idCategoria"
+                    (change)="findByIdCategoria()">
+                    <option *ngFor="let item of listaCategoria" value="{{item.id}}">{{item.nome}}</option>
+                </select>
+            </div>
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-danger mr-4" routerLink="/inicio">Cancelar</button>
+                <button class="btn btn-success" (click)="atualizar()">Atualizar</button>
+            </div>
+        </div>
+    </div>
+</div>
