--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,13 +7,13 @@
 
       <ul class="navbar-nav d-flex align-items-center justify-content-center">
         <li class="nav-item active">
-            <img [src]="foto" alt="imagem do usuario" width="250px" height="66">
+            <img [src]="foto" onerror="this.src = 'assets/img/logo.jpg'" alt="imagem do usuario" class="rounded-circle" width="50">
             <p class="nav-verde" href="#">Bem vinde, <span class="texto">{{nome}}</span></p>
             </li>
       </ul>
       <ul class="navbar-nav d-flex align-items-center ml-auto">
         <li class="nav-item active p-1 fredoka">
-            <a class="nav-verde" href="#">INÍCIO <span class="sr-only">(página atual)</span></a>
+            <a class="nav-verde" href="#">INÍCIO<span class="sr-only">(página atual)</span></a>
           </li>
           <li class="nav-item p-1 fredoka">
             <a class="nav-verde" href="#" routerLink='/restaurantes'>RESTAURANTES</a>
