--- a/src/app/entrar-cadastro/entrar-cadastro.component.html
+++ b/src/app/entrar-cadastro/entrar-cadastro.component.html
@@ -1,3 +1,5 @@
+<div class="container fredoka">
+
 <div>
   <h1 class="text-center mt-5">Minha <span>Conta</span></h1>
 </div>
@@ -109,4 +111,5 @@
     <!-- /Cadastrar -->
 
   </div>
+</div>
 </div>
