--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -3,9 +3,9 @@
   <div class="row w-100">
     <div class="col-md-12 espaco">
       <owl-carousel-o [options]="customOptions">
-        <ng-template carouselSlide><img src="../../assets/img/jantarVeg.jpg" alt=""></ng-template>
-        <ng-template carouselSlide><img src="../../assets/img/cafeDaManha.jpg" alt=""></ng-template>
-        <ng-template carouselSlide><img src="../../assets/img/hamburguer-vegano.jpg" alt=""></ng-template>
+        <ng-template carouselSlide><img src="https://i.imgur.com/IK8uiBL.jpg" alt="" class="espaco"></ng-template>
+        <ng-template carouselSlide><img src="https://i.imgur.com/88YqDvD.jpg" alt="" class="espaco" ></ng-template>
+        <ng-template carouselSlide><img src="https://i.imgur.com/nebw0qJ.jpg" alt="" class="espaco"></ng-template>
       </owl-carousel-o>
     </div>
   </div>
@@ -18,7 +18,8 @@
       <div class="row d-flex justify-content-center  align-items-center">
         <div class="col-md-7">
           <div class="form-group mb-5 mt-5">
-            <input type="text" class="form-control" id="tituloPesquisa" placeholder="Digite para pesquisar">
+            <input type="text" class="form-control" id="tituloPesquisa" placeholder="Digite para pesquisar" [(ngModel)]="nomeProduto"
+            (keyup)="findByTituloProduto()">
           </div>
         </div>
         <div class="col-md-2 mb-2 mt-2 text-end">
