sacola parte 1 e atualizacao de cadastro de produto

--- a/src/app/edit/produto-edit/produto-edit.component.html
+++ b/src/app/edit/produto-edit/produto-edit.component.html
@@ -33,7 +33,7 @@
                 <input [(ngModel)]="produto.foto" type="text" class="form-control" id="titulo" placeholder="estoque">
             </div>
             <div class="form-group">
-                <select class="form-control" name="tema" id="tema" [(ngModel)]="idCategoria"
+                <select class="form-control" name="categoria" id="categoria" [(ngModel)]="idCategoria"
                     (change)="findByIdCategoria()">
                     <option *ngFor="let item of listaCategoria" value="{{item.id}}">{{item.nome}}</option>
                 </select>
