--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="form-group">
                             <label for="texto">Escolha uma categoria</label>
-                            <select class="form-control" name="tema" id="tema" [(ngModel)]="idCategoria"
+                            <select class="form-control" name="categoria" id="categoria" [(ngModel)]="idCategoria"
                                 (change)="findByIdCategoria()">
                                 <option *ngFor="let item of listaCategorias" value="{{item.id}}">{{item.nome}}</option>
                             </select>
